# music-theory-swiss-army-knife

./: Cargo.toml  README.md
.github/workflows/: continuous-integration.yml
flatbuffer-schemata/: theory_primitives.fbs
src/: interval.rs  lib.rs  note.rs  scale.rs  theory_primitives_generated.rs
src/conversion/: interval.rs  note.rs  scale.rs
src/theory_primitive/: interval.rs  note.rs  scale.rs
tests/: get_notes_for_scale_degrees_test.rs  interval_conversion_major_scale_test.rs  interval_conversion_test.rs  scale_conversion_test.rs  scale_test.rs
